[package]
name = "gull-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gull-core = { workspace = true }

thiserror = "1.0.38"
openssl = "0.10.45"
tokio-openssl = "0.6.3"
log = "0.4.17"
tokio = { version = "1.25.0", features = ["net", "rt"] }
hyper = { version = "0.14.24", features = ["http1", "http2", "server"] }

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }
